# cronos

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_daily_ratings.py
app/: config.py  database.py  main.py  models.py
app/agent/: coach.py
app/integrations/: google_tasks.py  telegram_client.py  twilio_client.py
app/routes/: webhook.py
app/scheduler/: hourly_prompt.py  jobs.py
deploy/: cronos.service  nginx.conf
scripts/: google_auth.py  set_tone.py  telegram_setup.py
